back/manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  labels:
    app: backend-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      imagePullSecrets:
        - name: dockerhub-cred
      containers:
        - name: backend-api
          image: ${IMAGE}
          resources:
            requests:
              cpu: "60m"
              memory: "10Gi"
            limits:
              cpu: "100m"
              memory: "120Mi"
          ports:
            - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: backend-api
  labels:
    app: backend-api
spec:
  selector:
    app: backend-api
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
