back/manifests/postgres.yaml
#apiVersion: v1
#kind: Pod
#metadata:
#  name: postgres
#  labels:
#    app: postgres
#spec:
#  containers:
#    - name: postgres
#      image: postgres:16-alpine
#      ports:
#        - containerPort: 5432
#      envFrom:
#        - secretRef:
#            name: backend-secret
##      env:
##        - name: POSTGRES_DB
##          value: "todo"
##        - name: POSTGRES_USER
##          value: "todo"
##        - name: POSTGRES_PASSWORD
##          value: "todo"
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: postgres
#spec:
#  selector:
#    app: postgres
#  ports:
#    - port: 5432
#      targetPort: 5432
#  type: ClusterIP

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
#          envFrom:
#            - secretRef:
#                name: backend-secret
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
